source/crlibm/crlibm.h

/* Finished functions */
/* These functions are computed in two steps and have an average
   execution time comparable to that of a standard libm
*/

/*  exponential  */
extern double exp_rn(double); /* to nearest  */
extern double exp_rd(double); /* toward -inf */
 
extern double exp_ru(double); /* toward +inf */
 
#define exp_rz exp_rd         /* toward zero */ 
/*  logarithm  */
extern double log_rn(double); /* to nearest  */
extern double log_rd(double); /* toward -inf */
 
extern double log_ru(double); /* toward +inf */
 
extern double log_rz(double); /* toward zero */
 

/*  cosine  */
extern double cos_rn(double); /* to nearest  */
extern double cos_rd(double); /* toward -inf */
 
extern double cos_ru(double); /* toward +inf */
 
extern double cos_rz(double); /* toward zero */
 

/*  sine  */
extern double sin_rn(double); /* to nearest  */
extern double sin_rd(double); /* toward -inf */
 
extern double sin_ru(double); /* toward +inf */
 
extern double sin_rz(double); /* toward zero */
 

/*  tangent  */
extern double tan_rn(double); /* to nearest  */
extern double tan_rd(double); /* toward -inf */
 
extern double tan_ru(double); /* toward +inf */
extern double tan_rz(double); /* toward zero */
 

/*  arctangent  */
extern double atan_rn(double); /* to nearest  */
extern double atan_rd(double); /* toward -inf */
 
extern double atan_ru(double); /* toward +inf */
 
extern double atan_rz(double); /* toward zero */
 

/*  hyperbolic cosine*/
extern double cosh_rn(double); /* to nearest */
extern double cosh_rd(double); /* toward -inf */
 
extern double cosh_ru(double); /* toward +inf */
 
extern double cosh_rz(double); /* toward zero */
 

/*  hyperbolic sine */
extern double sinh_rn(double); /* to nearest */
extern double sinh_rd(double); /* toward -inf */
 
extern double sinh_ru(double); /* toward +inf */
 
extern double sinh_rz(double); /* toward zero */
 

extern double log10_rn(double); /* to nearest  */
extern double log10_rd(double); /* toward -inf */
 
extern double log10_ru(double); /* toward +inf */
 
extern double log10_rz(double); /* toward zero */